@@ -2,6 +2,7 @@
 	- Fix tcp idle timeout test, for difference in the tcp reply code.
 	- Unit test for tcp request reorder and timeouts.
 	- Unit tests for ssl out of order processing.
+	- Fix that multiple dns fragments can be carried in one TLS frame.
 
 17 January 2018: Wouter
 	- For caps-for-id fallback, use the whitelist to avoid timeout
